[package]
name = "time_duration_api"
version = "0.1.6"
edition = "2021"
description = " This crate provides a time/duration API for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.33"
humantime = "2.1" 

